cambio en view curriculum

--- a/index.html
+++ b/index.html
@@ -8,40 +8,109 @@
     <link rel="stylesheet" href="view_curriculum.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@200&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/e9e88d601f.js" crossorigin="anonymous"></script>
+
     <title>Curriculum</title>
 </head>
 
 <body class="body">
     <div class="container">
-        <div class="personal-info">
+
+
+        <div class="experience">
+            <div class="works-info">
+                <div class="line-a"></div>
+                <h2 class="h2-b">Experiencia:</h1>
+                    <div class="line-a"></div>
+                    <div>
+                        <h4>Ubuntu Inc. </h4>
+                        <p>Web developer</p>
+                        <p class="date">1995-Current</p>
+                        <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur culpa aliquam
+                                nemo
+                                quia nesciunt iste possimus? Alias, odit cumque nobis error eos eius eum! Rem asperiores
+                                facere recusandae repudiandae iure!</span>
+                            <h4>
+                                Desarrollador web (2010-2019)
+                            </h4>
+                            <p>Facebook Inc.</p>
+                            <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe dolore labore, adipisci
+                                perspiciatis blanditiis laboriosam architecto consequuntur rerum asperiores porro,
+                                officiis,
+                                quis ipsam excepturi? Suscipit maxime voluptatum facere harum consectetur?</span>
+                    </div>
+            </div>
+            <div class="software-info">
+                <div class="line-a"></div>
+                <h2 class="h2-b">Software:</h1>
+                    <div class="line-a"></div>
+                    <div>
+                        <h4>
+                            Desarrollador web (2010-2019)
+                        </h4>
+                        <p>Ubuntu Inc.</p>
+                        <span>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iste similique fugit quos
+                            ducimus voluptatum velit quas, modi est ipsum, facere blanditiis explicabo quisquam sint
+                            reprehenderit aut tempora. Repellendus, exercitationem ipsum.</span>
+                        <h4>
+                            Desarrollador web (2010-2019)
+                        </h4>
+                        <p>Facebook Inc.</p>
+                        <ul class="ul-b">
+                            <li> Ejemplo 1 </li>
+                            <li> Ejemplo 2</li>
+                            <li> Ejemplo 3 alv</li>
+                            <li> Ejemplo 4</li>
+                            <li> Ejemplo 5 alv</li>
+                            </li>
+                        </ul>
+
+                        <h4>
+                            Desarrollador web (2010-2019)
+                        </h4>
+                        <p>Facebook Inc.</p>
+                        <ul class="ul-b">
+                            <li> Ejemplo 1 </li>
+                            <li> Ejemplo 2</li>
+                            <li> Ejemplo 3 alv</li>
+                            <li> Ejemplo 4</li>
+                            <li> Ejemplo 5 alv</li>
+                            </li>
+                        </ul>
+                    </div>
+
+            </div>
+        </div>
+
+
+        <!-- Comienza la barra de contenido-->
+
+        <div class="content">
             <div class="img-container">
                 <img id="img-user" class="circle-img" src="../Assets/Logo_Hackademy.png">
-                <h2 id="name-user" class="h1-a" >
-                    Ivan C. Felix
-                    </h2>
-                <a href="/form_curriculum/form_curriculum.html" id="profesion" class="subtitle">Web Developer</a>
             </div>
-            <div  class="description-txt">
+            <h2 class="h2-a">Ivan</h2>
+            <div class="description-txt">
                 <div>
                     <p class="p-a">Contacto:</p>
                     <li class="li-a">
-                        <ul ><i class="far fa-envelope"></i> <p id="email-user">ejemplo@gmail.com </p></ul>
-                        <ul > <i class="fas fa-phone"></i><p id="phone-user"> </p></ul>
-                        <ul ><i class="fas fa-map-marked-alt"> </i><p id="dress-user"></p>
-</ul>
+                        <ul><i class="far fa-envelope"></i>
+                            <p id="email-user">ejemplo@gmail.com </p>
+                        </ul>
+                        <ul> <i class="fas fa-phone"></i>
+                            <p id="phone-user"> </p>
+                        </ul>
+                        <ul><i class="fas fa-map-marked-alt"> </i>
+                            <p id="dress-user"></p>
+                        </ul>
                     </li>
                 </div>
                 <div class="line-a"></div>
             </div>
             <p class="p-a">Aptitudes:</p>
-            <li class="li-a">
-                <ul> Ejemplo 1 </ul>
-                <ul> Ejemplo 2</ul>
-                <ul> Ejemplo 3 alv</ul>
-                <ul> Ejemplo 4</ul>
-                <ul> Ejemplo 5 alv</ul>
-            </li>
+
             <div class="line-a"></div>
 
             <p class="p-a">Idiomas:</p>
@@ -52,10 +121,11 @@
                 <ul> Ejemplo 4</ul>
                 <ul> Ejemplo 5 alv</ul>
             </li>
-
         </div>
 
-        <div class="experience-info">
+        <!-- Comienza la barra de educacion -->
+
+        <div class="education">
             <div class="works-info">
                 <h2>Experiencia:</h1>
                     <div>
@@ -63,31 +133,31 @@
                             Desarrollador web (2010-2019)
                         </h4>
                         <p>Ubuntu Inc.</p>
-                        <ul class="ul-b">
+                        <ul class="ul-a">
                             <li> Ejemplo 1 </li>
                             <li> Ejemplo 2</li>
                             <li> Ejemplo 3 alv</li>
                             <li> Ejemplo 4</li>
                             <li> Ejemplo 5 alv</li>
-                        </li>
-                        </ul> 
+                            </li>
+                        </ul>
                         <h4>
                             Desarrollador web (2010-2019)
                         </h4>
                         <p>Facebook Inc.</p>
-                        <ul class="ul-b">
+                        <ul class="ul-a">
                             <li> Ejemplo 1 </li>
                             <li> Ejemplo 2</li>
                             <li> Ejemplo 3 alv</li>
                             <li> Ejemplo 4</li>
                             <li> Ejemplo 5 alv</li>
-                        </li>
+                            </li>
                         </ul>
 
                     </div>
-                
+
             </div>
-            <div class="line-b"></div>
+            <div class="line-a"></div>
             <div class="schoolar-info">
                 <h2>Desarrollo Academico:</h1>
                     <div>
@@ -95,14 +165,14 @@
                             Desarrollador web (2010-2019)
                         </h4>
                         <p>Ubuntu Inc.</p>
-                        <ul class="ul-b">
+                        <ul class="ul-a">
                             <li> Ejemplo 1 </li>
                             <li> Ejemplo 2</li>
                             <li> Ejemplo 3 alv</li>
                             <li> Ejemplo 4</li>
                             <li> Ejemplo 5 alv</li>
-                        </li>
-                        </ul> 
+                            </li>
+                        </ul>
                         <h4>
                             Desarrollador web (2010-2019)
                         </h4>
@@ -113,7 +183,7 @@
                             <li> Ejemplo 3 alv</li>
                             <li> Ejemplo 4</li>
                             <li> Ejemplo 5 alv</li>
-                        </li>
+                            </li>
                         </ul>
 
                         <h4>
@@ -126,16 +196,16 @@
                             <li> Ejemplo 3 alv</li>
                             <li> Ejemplo 4</li>
                             <li> Ejemplo 5 alv</li>
-                        </li>
+                            </li>
                         </ul>
                     </div>
-                
+
             </div>
         </div>
-    </div>
     </div>
 </body>
 
 
 <script src="view_curriculum.js"></script>
+
 </html>
