cambio en formulario y agrege redes sociales

--- a/index.html
+++ b/index.html
@@ -17,12 +17,10 @@
 
 <body class="body">
     <div class="container">
-
-
         <div class="experience">
             <div class="works-info">
                 <div class="line-a"></div>
-                <h2 class="h2-b">Experiencia:</h1>
+                <h2 class="h2-b">Experience:</h1>
                     <div class="line-a"></div>
                     <div>
                         <h4>Ubuntu Inc. </h4>
@@ -91,7 +89,7 @@
             <div class="img-container">
                 <img id="img-user" class="circle-img" src="../Assets/Logo_Hackademy.png">
             </div>
-            <h2 class="h2-a">Ivan</h2>
+            <h2 class="h2-a" id="name-user">Ivan</h2>
             <div class="description-txt">
                 <div>
                     <p class="p-a">Contacto:</p>
@@ -127,52 +125,39 @@
 
         <div class="education">
             <div class="works-info">
-                <h2>Experiencia:</h1>
+                <div class="line-a"></div>
+                <h2 class="h2-b">Education:</h1>
+                    <div class="line-a"></div>
                     <div>
-                        <h4>
-                            Desarrollador web (2010-2019)
-                        </h4>
-                        <p>Ubuntu Inc.</p>
-                        <ul class="ul-a">
-                            <li> Ejemplo 1 </li>
-                            <li> Ejemplo 2</li>
-                            <li> Ejemplo 3 alv</li>
-                            <li> Ejemplo 4</li>
-                            <li> Ejemplo 5 alv</li>
-                            </li>
-                        </ul>
-                        <h4>
-                            Desarrollador web (2010-2019)
-                        </h4>
-                        <p>Facebook Inc.</p>
-                        <ul class="ul-a">
-                            <li> Ejemplo 1 </li>
-                            <li> Ejemplo 2</li>
-                            <li> Ejemplo 3 alv</li>
-                            <li> Ejemplo 4</li>
-                            <li> Ejemplo 5 alv</li>
-                            </li>
-                        </ul>
-
+                        <h4>Ubuntu Inc. </h4>
+                        <p>Web developer</p>
+                        <p class="date">1995-Current</p>
+                        <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur culpa aliquam
+                                nemo
+                                quia nesciunt iste possimus? Alias, odit cumque nobis error eos eius eum! Rem asperiores
+                                facere recusandae repudiandae iure!</span>
+                            <h4>
+                                Desarrollador web (2010-2019)
+                            </h4>
+                            <p>Facebook Inc.</p>
+                            <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe dolore labore, adipisci
+                                perspiciatis blanditiis laboriosam architecto consequuntur rerum asperiores porro,
+                                officiis,
+                                quis ipsam excepturi? Suscipit maxime voluptatum facere harum consectetur?</span>
                     </div>
-
             </div>
-            <div class="line-a"></div>
-            <div class="schoolar-info">
-                <h2>Desarrollo Academico:</h1>
+            <div class="software-info">
+                <div class="line-a"></div>
+                <h2 class="h2-b">Skills:</h1>
+                    <div class="line-a"></div>
                     <div>
                         <h4>
                             Desarrollador web (2010-2019)
                         </h4>
                         <p>Ubuntu Inc.</p>
-                        <ul class="ul-a">
-                            <li> Ejemplo 1 </li>
-                            <li> Ejemplo 2</li>
-                            <li> Ejemplo 3 alv</li>
-                            <li> Ejemplo 4</li>
-                            <li> Ejemplo 5 alv</li>
-                            </li>
-                        </ul>
+                        <span>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iste similique fugit quos
+                            ducimus voluptatum velit quas, modi est ipsum, facere blanditiis explicabo quisquam sint
+                            reprehenderit aut tempora. Repellendus, exercitationem ipsum.</span>
                         <h4>
                             Desarrollador web (2010-2019)
                         </h4>
